--- a/source/index.html
+++ b/source/index.html
@@ -15,17 +15,17 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a href="#">
+              <a href="index.html">
                 Главная
               </a>
             </li>
             <li class="site-list__item">
-              <a href="#">
+              <a href="catalog.html">
                 Каталог продукции
               </a>
             </li>
             <li class="site-list__item">
-              <a href="#">
+              <a href="form.html">
                 Подбор программы
               </a>
             </li>
@@ -129,15 +129,23 @@
       <a class="main-footer__logo" href="#">
         <img class="main-footer__logo-image" src="../image/logo text.png" alt="Логотип" width="128" height="24">
       </a>
-      <a class="main-footer__social" href="#">
-        <img src="../image/index/vkontakte.png" alt="Вконтакте" width="28" height="22">
-      </a>
-      <a class="main-footer__social" href="#">
-        <img src="../image/index/youtube.png" alt="Ютуб" width="28" height="22">
-      </a>
-      <a class="main-footer__social" href="#">
-        <img src="../image/index/telegram.png" alt="Телеграм" width="28" height="22">
-      </a>
+      <ul class="main-footer__list">
+        <li class="main-footer__item">
+          <a class="main-footer__social" href="#">
+            <img src="../image/index/vkontakte.png" alt="Вконтакте" width="28" height="22">
+          </a>
+        </li>
+        <li class="main-footer__item">
+          <a class="main-footer__social" href="#">
+            <img src="../image/index/youtube.png" alt="Ютуб" width="28" height="22">
+          </a>
+        </li>
+        <li class="main-footer__item">
+          <a class="main-footer__social" href="#">
+            <img src="../image/index/telegram.png" alt="Телеграм" width="28" height="22">
+          </a>
+        </li>
+      </ul>
       <a class="main-footer__html-link" href="#">
         <p class="main-footer__html-text">HTML Academy</p>
         <img class="main-footer__html-logo" src="../image/index/html academy.png" alt="HTML Academy" width="27" height="34">
