--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>Каталог</title>
 </head>
+
 <body>
+
   <body class="page_body">
-    <header class="main-header">
+    <header class="main-header container">
       <a class="main-header__logo" href="#">
-        <img class="main-header__logo-image" src="../image/logo-mobile.png" alt="Логотип" width="33" height="37">
-        <img class="main-header__logo-text" src="../image/logo text.png" alt="Логотип название" width="101" height="18">
+        <img class="main-header__logo-image" src="img/logo-mobile.png" alt="Логотип" width="33" height="37">
+        <img class="main-header__logo-text" src="img/logo text.png" alt="Логотип название" width="101" height="18">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
@@ -38,14 +42,14 @@
     </header>
 
     <main class="main-container">
-      <h1 class="visually-hidden">Продукция</h1>
+      <h1 class="visually-hidden container">Продукция</h1>
 
-      <section class="catalog">
+      <section class="catalog container">
         <div class="catalog__wrapper">
           <h2 class="catalog__title">Каталог продукции</h2>
           <ul class="catalog__list">
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-pro-500-chicken.png" alt="Готовая еда с курицей" width="68" height="86">
+              <img src="img/catalog/catalog-pro-500-chicken.png" alt="Готовая еда с курицей" width="68" height="86">
               <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -64,7 +68,7 @@
               <button class="catalog__order">Заказать</button>
             </li>
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-pro-1000-chicken.png" alt="Готовая еда с курицей" width="84" height="100">
+              <img src="img/catalog/catalog-pro-1000-chicken.png" alt="Готовая еда с курицей" width="84" height="100">
               <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -83,7 +87,7 @@
               <button class="catalog__order">Заказать</button>
             </li>
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-pro-500-fish.png" alt="Готовая еда с рыбой" width="68" height="86">
+              <img src="img/catalog/catalog-pro-500-fish.png" alt="Готовая еда с рыбой" width="68" height="86">
               <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -102,7 +106,7 @@
               <button class="catalog__order">Заказать</button>
             </li>
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-pro-1000-fish.png" alt="Готовая еда с рыбой" width="84" height="100">
+              <img src="img/catalog/catalog-pro-1000-fish.png" alt="Готовая еда с рыбой" width="84" height="100">
               <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -121,7 +125,7 @@
               <button class="catalog__order">Заказать</button>
             </li>
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-slim-500-buckwheat.png" alt="Готовая еда с гречкой" width="68" height="86">
+              <img src="img/catalog/catalog-slim-500-buckwheat.png" alt="Готовая еда с гречкой" width="68" height="86">
               <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -140,7 +144,8 @@
               <button class="catalog__order">Заказать</button>
             </li>
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-slim-1000-buckwheat.png" alt="Готовая еда с гречкой" width="84" height="100">
+              <img src="img/catalog/catalog-slim-1000-buckwheat.png" alt="Готовая еда с гречкой" width="84"
+                height="100">
               <h3 class="catalog__title-card">Cat enegy slim 1000 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -159,7 +164,7 @@
               <button class="catalog__order">Заказать</button>
             </li>
             <li class="catalog__item">
-              <img src="../image/catalog/catalog-slim-500-rice.png" alt="Готовая еда с рисом" width="68" height="86">
+              <img src="img/catalog/catalog-slim-500-rice.png" alt="Готовая еда с рисом" width="68" height="86">
               <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
               <dl class="catalog__info-list">
                 <div class="catalog__info-item">
@@ -184,7 +189,7 @@
           <button class="catalog__show-all">Показать все</button>
         </div>
       </section>
-      <section class="additional-goods">
+      <section class="additional-goods container">
         <div class="additional-goods__wrapper">
           <h2 class="additional-goods__title">Дополнительные товары</h2>
           <ul class="additional-goods__list">
@@ -230,7 +235,7 @@
             </li>
           </ul>
           <div class="additional-goods__gift">
-            <img src="../image/catalog/icon-gift.png" alt="Подарок" width="78" height="80">
+            <img src="img/catalog/icon-gift.png" alt="Подарок" width="78" height="80">
             <p class="additional-goods__gift-text">Заказите все и получите чехол для кота в подарок!</p>
           </div>
         </div>
@@ -240,33 +245,37 @@
     </main>
 
     <footer class="main-footer">
-      <section class="contacts">
+      <section class="contacts container">
         <div class="contacts__wrapper">
           <h2 class="visually-hidden"> Контакты компании</h2>
           <p class="contacts__cooperation">приглашаем к сотрудничеству дилеров!</p>
           <address class="contacts__address">ул. Большая
             Конюшенная, д. 19/8
             Санкт-Петербург</address>
-          <img class="contacts__map" src="../image/index/map.png" alt="Карта" width="320" height="362">
+          <img class="contacts__map" src="img/index/map.png" alt="Карта" width="320" height="362">
         </div>
       </section>
-      <a class="main-footer__logo" href="#">
-        <img class="main-footer__logo-image" src="../image/logo text.png" alt="Логотип" width="128" height="24">
-      </a>
-      <a class="main-footer__social" href="#">
-        <img src="../image/index/vkontakte.png" alt="Вконтакте" width="28" height="22">
-      </a>
-      <a class="main-footer__social" href="#">
-        <img src="../image/index/youtube.png" alt="Ютуб" width="28" height="22">
-      </a>
-      <a class="main-footer__social" href="#">
-        <img src="../image/index/telegram.png" alt="Телеграм" width="28" height="22">
-      </a>
-      <a class="main-footer__html-link" href="#">
-        <p class="main-footer__html-text">HTML Academy</p>
-        <img class="main-footer__html-logo" src="../image/index/html academy.png" alt="HTML Academy" width="27" height="34">
-      </a>
+      <div class="container">
+        <a class="main-footer__logo" href="#">
+          <img class="main-footer__logo-image" src="img/logo text.png" alt="Логотип" width="128" height="24">
+        </a>
+        <a class="main-footer__social" href="#">
+          <img src="img/index/vkontakte.png" alt="Вконтакте" width="28" height="22">
+        </a>
+        <a class="main-footer__social" href="#">
+          <img src="img/index/youtube.png" alt="Ютуб" width="28" height="22">
+        </a>
+        <a class="main-footer__social" href="#">
+          <img src="img/index/telegram.png" alt="Телеграм" width="28" height="22">
+        </a>
+        <a class="main-footer__html-link" href="#">
+          <p class="main-footer__html-text">HTML Academy</p>
+          <img class="main-footer__html-logo" src="img/index/html academy.png" alt="HTML Academy" width="27"
+            height="34">
+        </a>
+      </div>
     </footer>
 
-</body>
+  </body>
+
 </html>
