--- a/source/index.html
+++ b/source/index.html
@@ -2,13 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body class="page_body">
-    <header class="main-header">
+    <header class="main-header container">
       <a class="main-header__logo" href="#">
-        <img class="main-header__logo-image" src="../image/logo-mobile.png" alt="Логотип" width="33" height="37">
-        <img class="main-header__logo-text" src="../image/logo text.png" alt="Логотип название" width="101" height="18">
+        <img class="main-header__logo-image" src="img/logo-mobile.png" alt="Логотип" width="33" height="37">
+        <img class="main-header__logo-text" src="img/logo text.png" alt="Логотип название" width="101" height="18">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
@@ -35,65 +36,67 @@
     </header>
 
     <main class="main-container">
-      <h1 class="visually-hidden">Правильное питание для котов</h1>
+      <h1 class="visually-hidden container">Правильное питание для котов</h1>
 
-      <section class="promo">
+      <section class="promo container">
         <div class="promo__wrapper">
-          <h2 class="promo__title">Функциональное питание для котов</h2>
-          <p class="promo__slogan">Занялся собой? займись котом!</p>
-          <img class="promo__production" src="../image/index/production.png" alt="Пример продукции" width="280" height="270">
+          <div class="promo__background">
+            <h2 class="promo__title">Функциональное питание для котов</h2>
+            <p class="promo__slogan">Занялся собой? займись котом!</p>
+          </div>
+          <img class="promo__production" src="img/index/production.png" alt="Пример продукции" width="280" height="270">
           <button class="promo__button">Подобрать программу</button>
         </div>
       </section>
 
-      <section class="type-program">
+      <section class="type-program container">
         <div class="type-program__wrapper">
           <h2 class="visually-hidden">Типы программы</h2>
           <ul class="type-program__list">
             <li class="type-program__item">
-              <img src="../image/index/weight_loss.png" alt="Похудение" width="50" height="53">
+              <img src="img/index/weight_loss.png" alt="Похудение" width="50" height="53">
               <h3 class="type-program__title">Похудение</h3>
               <p class="type-program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
               <a class="type-program__transition-catalog" href="#"> каталог slim
-                <img class="type-program__icon" src="../image/index/icon.png" alt="Иконка перехода">
+                <img class="type-program__icon" src="img/index/icon.png" alt="Иконка перехода">
               </a>
             </li>
             <li class="type-program__item">
-              <img src="../image/index/weight_gain.png" alt="Похудение" width="67" height="50">
+              <img src="img/index/weight_gain.png" alt="Похудение" width="67" height="50">
               <h3 class="type-program__title">Похудение</h3>
               <p class="type-program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
               <a class="type-program__transition-catalog" href="#"> каталог slim
-                <img class="type-program__icon" src="../image/index/icon.png" alt="Иконка перехода">
+                <img class="type-program__icon" src="img/index/icon.png" alt="Иконка перехода">
               </a>
             </li>
           </ul>
         </div>
       </section>
 
-      <section class="how-it-works">
+      <section class="how-it-works container">
         <div class="how-it-works__wrapper">
           <h2 class="how-it-works__title">Как это работает</h2>
           <ul class="how-it-works__list">
             <li class="how-it-works__item">
-              <img class="how-it-works__image" src="../image/index/benefit.png" alt="Полезные вещества" width="60" height="60">
+              <img class="how-it-works__image" src="img/index/benefit.png" alt="Полезные вещества" width="60" height="60">
               <p class="how-it-works__description">Функциональное питание
                 содержит только полезные
                 питательные вещества.</p>
             </li>
             <li class="how-it-works__item">
-              <img class="how-it-works__image" src="../image/index/convenience.png" alt="Удобное использование" width="60" height="60">
+              <img class="how-it-works__image" src="img/index/convenience.png" alt="Удобное использование" width="60" height="60">
               <p class="how-it-works__description">Выпускается в виде порошка,
                 который нужно лишь залить
                 кипятком и готово.</p>
             </li>
             <li class="how-it-works__item">
-              <img class="how-it-works__image" src="../image/index/replacement.png" alt="Вилка, ложка" width="60" height="60">
+              <img class="how-it-works__image" src="img/index/replacement.png" alt="Вилка, ложка" width="60" height="60">
               <p class="how-it-works__description">Замените один-два приема
                 обычной еды на наше
                 функциональное питание.</p>
             </li>
             <li class="how-it-works__item">
-              <img class="how-it-works__image" src="../image/index/result.png" alt="Быстрый результат" width="60" height="60">
+              <img class="how-it-works__image" src="img/index/result.png" alt="Быстрый результат" width="60" height="60">
               <p class="how-it-works__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
@@ -101,7 +104,7 @@
       </section>
 
       <section class="example">
-        <div class="example__wrapper">
+        <div class="example__wrapper container">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
           <p class="example__quantity">5 кг</p>
@@ -109,46 +112,46 @@
           <p class="example__quantity">60 дней</p>
           <p class="example__quantity-description">Затрачено времени</p>
           <p class="example__price">Затраты на питание: 15 000 РУБ. </p>
-          <img src="../image/index/compare-slider.png" alt="Изменение кота" width="280" height="256">
+          <img src="img/index/compare-slider.png" alt="Изменение кота" width="280" height="256">
         </div>
       </section>
 
-      <section class="contacts">
+      <section class="contacts container">
         <div class="contacts__wrapper">
           <h2 class="visually-hidden"> Контакты компании</h2>
           <p class="contacts__cooperation">приглашаем к сотрудничеству дилеров!</p>
           <address class="contacts__address">ул. Большая
             Конюшенная, д. 19/8
             Санкт-Петербург</address>
-          <img class="contacts__map" src="../image/index/map.png" alt="Карта" width="320" height="362">
+          <img class="contacts__map" src="img/index/map.png" alt="Карта" width="320" height="362">
         </div>
       </section>
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer container">
       <a class="main-footer__logo" href="#">
-        <img class="main-footer__logo-image" src="../image/logo text.png" alt="Логотип" width="128" height="24">
+        <img class="main-footer__logo-image" src="img/logo text.png" alt="Логотип" width="128" height="24">
       </a>
       <ul class="main-footer__list">
         <li class="main-footer__item">
           <a class="main-footer__social" href="#">
-            <img src="../image/index/vkontakte.png" alt="Вконтакте" width="28" height="22">
+            <img src="img/index/vkontakte.png" alt="Вконтакте" width="28" height="22">
           </a>
         </li>
         <li class="main-footer__item">
           <a class="main-footer__social" href="#">
-            <img src="../image/index/youtube.png" alt="Ютуб" width="28" height="22">
+            <img src="img/index/youtube.png" alt="Ютуб" width="28" height="22">
           </a>
         </li>
         <li class="main-footer__item">
           <a class="main-footer__social" href="#">
-            <img src="../image/index/telegram.png" alt="Телеграм" width="28" height="22">
+            <img src="img/index/telegram.png" alt="Телеграм" width="28" height="22">
           </a>
         </li>
       </ul>
       <a class="main-footer__html-link" href="#">
         <p class="main-footer__html-text">HTML Academy</p>
-        <img class="main-footer__html-logo" src="../image/index/html academy.png" alt="HTML Academy" width="27" height="34">
+        <img class="main-footer__html-logo" src="img/index/html academy.png" alt="HTML Academy" width="27" height="34">
       </a>
     </footer>
 
