:heavy_check_mark: Сборка #5

--- a/5/catalog.html
+++ b/5/catalog.html
@@ -53,9 +53,13 @@
           <ul class="catalog__list">
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-odd catalog__500-chicken"></div>
+                <a class="catalog__image catalog__image-odd catalog__500-chicken" href="#">
+                  <div class="catalog__image catalog__image-odd"></div>
+                </a>
                 <div class="catalog__text catalog__odd">
-                  <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
+                  <a class="catalog__title-card-link" href="#">
+                    <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -72,13 +76,17 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"> <span>Заказать</span></button>
             </li>
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-even catalog__1000-chicken"></div>
+                <a href="#" class="catalog__image catalog__image-even catalog__1000-chicken">
+                  <div class="catalog__image catalog__image-even"></div>
+                </a>
                 <div class="catalog__text catalog__even">
-                  <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
+                  <a href="#" class="catalog__title-card-link">
+                    <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -95,13 +103,17 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"><span>Заказать</span></button>
             </li>
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-odd catalog__500-fish"></div>
+                <a class="catalog__image catalog__image-odd catalog__500-fish" href="#">
+                  <div class="catalog__image catalog__image-odd"></div>
+                </a>
                 <div class="catalog__text catalog__odd">
-                  <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
+                  <a class="catalog__title-card-link" href="#">
+                    <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -118,13 +130,17 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"><span>Заказать</span></button>
             </li>
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-even catalog__1000-fish"></div>
+                <a href="#" class="catalog__image catalog__image-even catalog__1000-fish">
+                  <div class="catalog__image catalog__image-even"></div>
+                </a>
                 <div class="catalog__text catalog__even">
-                  <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
+                  <a href="#" class="catalog__title-card-link">
+                    <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -141,13 +157,17 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"><span>Заказать</span></button>
             </li>
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-odd catalog__500-buckwheat"></div>
+                <a href="#" class="catalog__image catalog__image-odd catalog__500-buckwheat">
+                  <div class="catalog__image catalog__image-odd"></div>
+                </a>
                 <div class="catalog__text catalog__odd">
-                  <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
+                  <a href="#" class="catalog__title-card-link">
+                    <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -164,13 +184,17 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"><span>Заказать</span></button>
             </li>
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-even catalog__1000-buckwheat"></div>
+                <a href="#" class="catalog__image catalog__image-even catalog__1000-buckwheat">
+                  <div class="catalog__image catalog__image-even"></div>
+                </a>
                 <div class="catalog__text catalog__even">
-                  <h3 class="catalog__title-card">Cat enegy slim 1000 г</h3>
+                  <a href="#" class="catalog__title-card-link">
+                    <h3 class="catalog__title-card">Cat enegy slim 1000 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -187,13 +211,17 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"><span>Заказать</span></button>
             </li>
             <li class="catalog__item">
               <div class="catalog__block">
-                <div class="catalog__image catalog__image-odd catalog__500-rice"></div>
+                <a href="#" class="catalog__image catalog__image-odd catalog__500-rice">
+                  <div class="catalog__image catalog__image-odd"></div>
+                </a>
                 <div class="catalog__text catalog__odd">
-                  <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
+                  <a href="#" class="catalog__title-card-link">
+                    <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
+                  </a>
                   <dl class="catalog__info-list">
                     <div class="catalog__info-item">
                       <dt class="catalog__info-description">Масса</dt>
@@ -210,13 +238,13 @@
                   </dl>
                 </div>
               </div>
-              <button class="catalog__order">Заказать</button>
+              <button class="catalog__order"><span>Заказать</span></button>
             </li>
             <li class="catalog__item catalog__block-show-all">
               <button class="catalog__button-show"> </button>
               <h3 class="catalog__show-product">Показать еще 100500 товаров</h3>
               <p class="catalog__many-flavors">На самом деле вкусов гораздо больше</p>
-              <button class="catalog__show-all">Показать все</button>
+              <button class="catalog__show-all"> <span>Показать все </span></button>
               <div>
             </li>
           </ul>
@@ -237,7 +265,7 @@
                     </div>
                   </dl>
                 </div>
-                <button class="additional-goods__order">Заказать</button>
+                <button class="additional-goods__order"><span>Заказать</span></button>
               </li>
               <li class="additional-goods__item">
                 <div class="additional-goods__text">
@@ -249,7 +277,7 @@
                     </div>
                   </dl>
                 </div>
-                <button class="additional-goods__order">Заказать</button>
+                <button class="additional-goods__order"><span>Заказать</span></button>
               </li>
               <li class="additional-goods__item">
                 <div class="additional-goods__text">
@@ -261,7 +289,7 @@
                     </div>
                   </dl>
                 </div>
-                <button class="additional-goods__order">Заказать</button>
+                <button class="additional-goods__order"><span>Заказать</span></button>
               </li>
               <li class="additional-goods__item">
                 <div class="additional-goods__text">
@@ -273,7 +301,7 @@
                     </div>
                   </dl>
                 </div>
-                <button class="additional-goods__order">Заказать</button>
+                <button class="additional-goods__order"><span>Заказать</span></button>
               </li>
             </ul>
             <div class="additional-goods__gift">
