--- a/5/form.html
+++ b/5/form.html
@@ -139,7 +139,7 @@
         </fieldset>
 
         <div class="program-selection__request-block" >
-          <button class="program-selection__request" type="submit">Отправить заявку</button>
+          <button class="program-selection__request" type="submit"> <span>Отправить заявку</span></button>
           <p class="program-selection__required-fields">* — Обязательные поля</p>
         </div>
 
