--- a/6/catalog.html
+++ b/6/catalog.html
@@ -62,7 +62,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a class="catalog__image catalog__image-odd catalog__500-chicken" href="#">
-                  <div class="catalog__image catalog__image-odd"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-pro-500-chicken-tablet.png 1x, img/catalog/catalog-pro-500-chicken-tablet@2x.png 2x" width="161" height="172">
+                    <img src="img/catalog/catalog-pro-500-chicken-mobile.png" srcset="img/catalog/catalog-pro-500-chicken-mobile@2x.png 2x" alt="Пример продукции" width="68" height="86">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__odd">
                   <a class="catalog__title-card-link" href="#">
@@ -89,7 +92,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a href="#" class="catalog__image catalog__image-even catalog__1000-chicken">
-                  <div class="catalog__image catalog__image-even"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-pro-1000-chicken-tablet.png 1x, img/catalog/catalog-pro-1000-chicken-tablet@2x.png 2x" width="168" height="200">
+                    <img src="img/catalog/catalog-pro-1000-chicken-mobile.png" srcset="img/catalog/catalog-pro-1000-chicken-mobile@2x.png 2x" alt="Пример продукции" width="84" height="100">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__even">
                   <a href="#" class="catalog__title-card-link">
@@ -116,7 +122,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a class="catalog__image catalog__image-odd catalog__500-fish" href="#">
-                  <div class="catalog__image catalog__image-odd"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-pro-500-fish-tablet.png 1x, img/catalog/catalog-pro-500-fish-tablet@2x.png 2x" width="163" height="174">
+                    <img src="img/catalog/catalog-pro-500-fish-mobile.png" srcset="img/catalog/catalog-pro-500-fish-mobile@2x.png 2x" alt="Пример продукции" width="68" height="78">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__odd">
                   <a class="catalog__title-card-link" href="#">
@@ -143,7 +152,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a href="#" class="catalog__image catalog__image-even catalog__1000-fish">
-                  <div class="catalog__image catalog__image-even"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-pro-1000-fish-tablet.png 1x, img/catalog/catalog-pro-1000-fish-tablet@2x.png 2x" width="168" height="200">
+                    <img src="img/catalog/catalog-pro-1000-fish-mobile.png" srcset="img/catalog/catalog-pro-1000-fish-mobile@2x.png 2x" alt="Пример продукции" width="84" height="100">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__even">
                   <a href="#" class="catalog__title-card-link">
@@ -170,7 +182,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a href="#" class="catalog__image catalog__image-odd catalog__500-buckwheat">
-                  <div class="catalog__image catalog__image-odd"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-slim-500-buckwheat-tablet.png 1x, img/catalog/catalog-slim-500-buckwheat-tablet@2x.png 2x" width="161" height="171">
+                    <img src="img/catalog/catalog-slim-500-buckwheat-mobile.png" srcset="img/catalog/catalog-slim-500-buckwheat-mobile@2x.png 2x" alt="Пример продукции" width="68" height="78">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__odd">
                   <a href="#" class="catalog__title-card-link">
@@ -197,7 +212,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a href="#" class="catalog__image catalog__image-even catalog__1000-buckwheat">
-                  <div class="catalog__image catalog__image-even"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-slim-1000-buckwheat-tablet.png 1x, img/catalog/catalog-slim-1000-buckwheat-tablet@2x.png 2x" width="168" height="200">
+                    <img src="img/catalog/catalog-slim-1000-buckwheat-mobile.png" srcset="img/catalog/catalog-slim-1000-buckwheat-mobile@2x.png 2x" alt="Пример продукции" width="84" height="100">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__even">
                   <a href="#" class="catalog__title-card-link">
@@ -224,7 +242,10 @@
             <li class="catalog__item">
               <div class="catalog__block">
                 <a href="#" class="catalog__image catalog__image-odd catalog__500-rice">
-                  <div class="catalog__image catalog__image-odd"></div>
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="img/catalog/catalog-slim-500-rice-tablet.png 1x, img/catalog/catalog-slim-500-rice-tablet@2x.png 2x" width="163" height="174">
+                    <img src="img/catalog/catalog-slim-500-rice-mobile.png" srcset="img/catalog/catalog-slim-500-rice-mobile@2x.png 2x" alt="Пример продукции" width="68" height="78">
+                  </picture>
                 </a>
                 <div class="catalog__text catalog__odd">
                   <a href="#" class="catalog__title-card-link">
